--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,9 +19,19 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
-    - name: Get dependencies
+    - name: Get dependencies (Ubuntu)
+      if: matrix.os == 'ubuntu-18.04'
       run: |
         go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+    - name: Get dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        go get -v -t -d ./...
+        bash
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
