--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -20,6 +20,14 @@ jobs:
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       shell: bash
+      
+    - name: Print version
+      shell: bash
+      run: echo ${{ github.ref/refs\/tags\// }}
+      
+    - name: Print version 2
+      shell: bash
+      run: echo ${{ steps.get_version.outputs.version }}
 
     #- name: Get dependencies
     #  run: |
