--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -1,9 +1,12 @@
 name: go-release
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*'
 jobs:
 
   build:
-    name: Build
+    name: Create release
     runs-on: ubuntu-latest
     steps:
 
@@ -16,6 +19,15 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
       
+    - name: Get dependencies
+      shell: bash
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+      
     - name: Get the version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
@@ -24,14 +36,19 @@ jobs:
     - name: Print version
       shell: bash
       run: echo ${{ steps.get_version.outputs.version }}
-
-    #- name: Get dependencies
-    #  run: |
-    #    go get -v -t -d ./...
-    #    if [ -f Gopkg.toml ]; then
-    #        curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-    #        dep ensure
-    #    fi
+      
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ steps.get_version.outputs.version }}
+        release_name: Release ${{ steps.get_version.outputs.version }}
+        body: |
+          Changes in this Release
+        draft: false
+        prerelease: true
 
     #- name: Build
     #  run: go build -v .
