--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -50,5 +50,18 @@ jobs:
         draft: false
         prerelease: true
 
-    #- name: Build
-    #  run: go build -v .
+    - name: Build (Linux)
+      run: |
+        go build -v .
+        tar -czvf netmeg-release-${{ steps.get_version.outputs.version }}.tar.gz ./netmeg
+    
+    - name: Upload Release Asset (Linux)
+      id: upload-release-asset-linux
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: ./netmeg-release-${{ steps.get_version.outputs.version }}.tar.gz
+        asset_name: netmeg-release-${{ steps.get_version.outputs.version }}.tar.gz
+        asset_content_type: application/gzip
