--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -65,3 +65,20 @@ jobs:
         asset_path: ./netmeg-release-${{ steps.get_version.outputs.version }}.tar.gz
         asset_name: netmeg-release-${{ steps.get_version.outputs.version }}.tar.gz
         asset_content_type: application/gzip
+
+    - name: Build (Windows)
+      run: |
+        GOOS=windows go get -u github.com/spf13/cobra
+        env GOOS=windows GOARCH=amd64 go build -v .
+        zip netmeg-release-${{ steps.get_version.outputs.version }}.zip ./netmeg.exe
+    
+    - name: Upload Release Asset (Windows)
+      id: upload-release-asset-windows
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: ./netmeg-release-${{ steps.get_version.outputs.version }}.zip
+        asset_name: netmeg-release-${{ steps.get_version.outputs.version }}.zip
+        asset_content_type: application/zip
